Renamed everything from vscreate to vsrnd

--- a/common/src/main/resources/assets/vsrnd/lang/en_pt.json
+++ b/common/src/main/resources/assets/vsrnd/lang/en_pt.json
@@ -1,38 +1,38 @@
 {
-  "itemGroup.vscreate.eureka_tab": "VS Eureka",
-  "block.vscreate.oak_ship_helm": "Oak Ship Helm",
-  "block.vscreate.spruce_ship_helm": "Spruce Ship Helm",
-  "block.vscreate.birch_ship_helm": "Birch Ship Helm",
-  "block.vscreate.jungle_ship_helm": "Jungle Ship Helm",
-  "block.vscreate.acacia_ship_helm": "Acacia Ship Helm",
-  "block.vscreate.dark_oak_ship_helm": "Dusky Oak Ship Helm",
-  "block.vscreate.crimson_ship_helm": "Ichor Ship Helm",
-  "block.vscreate.warped_ship_helm": "Twist'd Ship Helm",
-  "block.vscreate.anchor": "Anchor",
-  "block.vscreate.engine": "Oven Sail",
-  "block.vscreate.balloon": "Dutchman's Sail",
-  "block.vscreate.white_balloon": "White Balloon",
-  "block.vscreate.light_gray_balloon": "Light Gray Balloon",
-  "block.vscreate.gray_balloon": "Gray Balloon",
-  "block.vscreate.black_balloon": "Black Balloon",
-  "block.vscreate.red_balloon": "Scarlet Balloon",
-  "block.vscreate.orange_balloon": "Orange Balloon",
-  "block.vscreate.yellow_balloon": "Yellow Balloon",
-  "block.vscreate.lime_balloon": "Lime Balloon",
-  "block.vscreate.green_balloon": "Green Balloon",
-  "block.vscreate.light_blue_balloon": "Light Blue Balloon",
-  "block.vscreate.blue_balloon": "Blue Balloon",
-  "block.vscreate.purple_balloon": "Purple Balloon",
-  "block.vscreate.magenta_balloon": "Magenta Balloon",
-  "block.vscreate.pink_balloon": "Pink Balloon",
-  "block.vscreate.brown_balloon": "Brown Balloon",
-  "block.vscreate.floater": "Float'r",
-  "block.vscreate.ballast": "Ballast",
-  "gui.vscreate.ship_helm": "Ship Helm",
-  "gui.vscreate.engine": "Oven Sail",
-  "gui.vscreate.assemble": "Cast Off",
-  "gui.vscreate.disassemble": "Dock",
-  "gui.vscreate.align": "Come About",
-  "gui.vscreate.aligning": "Comin' About...",
-  "gui.vscreate.todo": "Ye lamb be wretched n' wee"
+  "itemGroup.vsrnd.eureka_tab": "VS Eureka",
+  "block.vsrnd.oak_ship_helm": "Oak Ship Helm",
+  "block.vsrnd.spruce_ship_helm": "Spruce Ship Helm",
+  "block.vsrnd.birch_ship_helm": "Birch Ship Helm",
+  "block.vsrnd.jungle_ship_helm": "Jungle Ship Helm",
+  "block.vsrnd.acacia_ship_helm": "Acacia Ship Helm",
+  "block.vsrnd.dark_oak_ship_helm": "Dusky Oak Ship Helm",
+  "block.vsrnd.crimson_ship_helm": "Ichor Ship Helm",
+  "block.vsrnd.warped_ship_helm": "Twist'd Ship Helm",
+  "block.vsrnd.anchor": "Anchor",
+  "block.vsrnd.engine": "Oven Sail",
+  "block.vsrnd.balloon": "Dutchman's Sail",
+  "block.vsrnd.white_balloon": "White Balloon",
+  "block.vsrnd.light_gray_balloon": "Light Gray Balloon",
+  "block.vsrnd.gray_balloon": "Gray Balloon",
+  "block.vsrnd.black_balloon": "Black Balloon",
+  "block.vsrnd.red_balloon": "Scarlet Balloon",
+  "block.vsrnd.orange_balloon": "Orange Balloon",
+  "block.vsrnd.yellow_balloon": "Yellow Balloon",
+  "block.vsrnd.lime_balloon": "Lime Balloon",
+  "block.vsrnd.green_balloon": "Green Balloon",
+  "block.vsrnd.light_blue_balloon": "Light Blue Balloon",
+  "block.vsrnd.blue_balloon": "Blue Balloon",
+  "block.vsrnd.purple_balloon": "Purple Balloon",
+  "block.vsrnd.magenta_balloon": "Magenta Balloon",
+  "block.vsrnd.pink_balloon": "Pink Balloon",
+  "block.vsrnd.brown_balloon": "Brown Balloon",
+  "block.vsrnd.floater": "Float'r",
+  "block.vsrnd.ballast": "Ballast",
+  "gui.vsrnd.ship_helm": "Ship Helm",
+  "gui.vsrnd.engine": "Oven Sail",
+  "gui.vsrnd.assemble": "Cast Off",
+  "gui.vsrnd.disassemble": "Dock",
+  "gui.vsrnd.align": "Come About",
+  "gui.vsrnd.aligning": "Comin' About...",
+  "gui.vsrnd.todo": "Ye lamb be wretched n' wee"
 }
