--- a/common/src/main/resources/assets/vsrnd/lang/de_de.json
+++ b/common/src/main/resources/assets/vsrnd/lang/de_de.json
@@ -1,9 +1,9 @@
 {
-  "itemGroup.vscreate.eureka_tab": "VS Eureka",
-  "block.vscreate.ship_helm": "Steuerruder",
-  "block.vscreate.anchor": "Anker",
-  "block.vscreate.engine": "Schiffsmotor",
-  "block.vscreate.balloon": "Ballon",
-  "block.vscreate.floater": "Schwimmer",
-  "block.vscreate.ballast": "Ballast"
+  "itemGroup.vsrnd.eureka_tab": "VS Eureka",
+  "block.vsrnd.ship_helm": "Steuerruder",
+  "block.vsrnd.anchor": "Anker",
+  "block.vsrnd.engine": "Schiffsmotor",
+  "block.vsrnd.balloon": "Ballon",
+  "block.vsrnd.floater": "Schwimmer",
+  "block.vsrnd.ballast": "Ballast"
 }
