--- a/common/src/main/resources/assets/vsrnd/lang/nl_be.json
+++ b/common/src/main/resources/assets/vsrnd/lang/nl_be.json
@@ -1,9 +1,9 @@
 {
-  "itemGroup.vscreate.eureka_tab": "VS Ksnaphet",
-  "block.vscreate.ship_helm": "Schip Roer",
-  "block.vscreate.anchor": "Anker",
-  "block.vscreate.engine": "Schip Motor",
-  "block.vscreate.floater": "Drijver",
-  "block.vscreate.balloon": "Ballon",
-  "block.vscreate.ballast": "Balast"
+  "itemGroup.vsrnd.eureka_tab": "VS Ksnaphet",
+  "block.vsrnd.ship_helm": "Schip Roer",
+  "block.vsrnd.anchor": "Anker",
+  "block.vsrnd.engine": "Schip Motor",
+  "block.vsrnd.floater": "Drijver",
+  "block.vsrnd.balloon": "Ballon",
+  "block.vsrnd.ballast": "Balast"
 }
